@@ -1,0 +1,3 @@
+{
+  "parent": "jamiesmod:block/short_grass"
+}
